/* 
  Localizable.strings
  QCards

  Created by Andreas Lüdemann on 11/08/2019.
  Copyright © 2019 Andreas Lüdemann. All rights reserved.
*/

"Snapshot.DeckTitle" = "My presentation";
"Snapshot.CardTitle1" = "First topic";
"Snapshot.CardContent1" = "Here are some very important points";
"Snapshot.CardTitle2" = "First topic";
"Snapshot.CardContent2" = "Here are some very important points";
"Snapshot.CardTitle3" = "First topic";
"Snapshot.CardContent3" = "Here are some very important points";
