...

class SettingsViewController: UITableViewController {
    
    var viewModel: SettingsViewModel!
    
    private let store = PublishSubject<Void>()
    private let okButton = UIBarButtonItem(title: NSLocalizedString("Common.OK", comment: ""),
                                           style: .plain, target: self, action: nil)
    
    override func viewWillAppear(_ animated: Bool) {
        self.store.onNext(())
    }
    
...
